# Gradia

./: .gitignore  README.md  TRANSLATING.md  gradia.doap  meson.build  meson.options  pyproject.toml
.github/workflows/: build.yml
build-aux/flatpak/: be.alexandervanhee.gradia.Devel.json  be.alexandervanhee.gradia.Plugin.ocr.json  be.alexandervanhee.gradia.Plugin.ocr.metainfo.xml  be.alexandervanhee.gradia.json  pypi-dependencies.json
build-aux/snap/: snapcraft.yaml
data/: be.alexandervanhee.gradia.desktop.in.in  be.alexandervanhee.gradia.gschema.xml  be.alexandervanhee.gradia.metainfo.xml.in.in  gradia.gresource.xml.in  help.txt  meson.build  screenshot_folder_names.json  style-dark.css  style-hc.css  style.css
data/ui/: background_selector.blp  confirm_close_dialog.blp  drawing_tools_group.blp  gradient_step_dialog.blp  image_generator_window.blp  image_sidebar.blp  image_stack.blp  main_window.blp  meson.build  ocr_dialog.blp  preferences_window.blp  recent_picker.blp  settings_window.blp  text_entry_popover.blp  welcome_page.blp
data/ui/preferences/: custom_provider_page.blp  ocr_model_page.blp  provider_detail_page.blp  provider_list_page.blp  screenshot_guide_page.blp
data/ui/selectors/: gradient_selector.blp  image_selector.blp  solid_selector.blp
gradia/: app_constants.py  clipboard.py  constants.in  gradia.in  main.py
gradia/backend/: ocr.py  settings.py  tool_config.py
gradia/graphics/: gradient.py  gradient_gen.c  gradient_selector.py  image.py  image_processor.py  loaded_image.py  solid.py
gradia/overlay/: crop_overlay.py  drawing_actions.py  drawing_overlay.py  drawing_settings.py  drop_overlay.py  text_entry_popover.py  transparency_overlay.py  zoom_controller.py
gradia/ui/: background_selector.py  drawing_tools_group.py  font_dropdown_controller.py  image_exporters.py  image_loaders.py  image_sidebar.py  image_stack.py  preferences_window.py  provider_selection_window.py  recent_picker.py  settings_window.py  ui_parts.py  welcome_page.py  window.py
gradia/ui/dialog/: confirm_close_dialog.py  delete_screenshots_dialog.py  ocr_dialog.py
gradia/ui/image_creation/: source_image_generator.py
gradia/ui/preferences/: ocr_model_page.py  preferences_window.py  provider_selection_window.py
gradia/ui/widget/: angle_selector.py  aspect_ratio_button.py  background_aspect_ratio_selector.py  drawing_tools_grid.py  font_dropdown.py  gradient_editor.py  gradient_preset_button.py  gradient_step_dialog_button.py  preset_button.py  quick_color_picker.py
gradia/utils/: colors.py  std_image_loader.py  timestamp_filename.py
po/: LINGUAS  POTFILES.in  de.po  es.po  fr.po  gradia.pot  hr.po  it.po  kk.po  nl.po  oc.po  pl.po  pt_BR.po  ru.po  te.po  tr.po  uk.po  zh_CN.po
scripts/: update-po.sh
web/: README.md  index.html  package-lock.json  providers.html  styles.css  upload-commands.html
web/assets/styles/: base-tailwind.css  base.css  index.css  providers.css
web/styles/: base.css
web/upload-providers/: 1.10.0.json  1.6.0.json  provider-info.json
